feat: add meta-agent and example specs
Implement meta-agent for parsing workflow specifications into JSON AST
using direct generation approach. Add five example specs covering
sequential, conditional, parallel, nested, and orchestrator patterns.

Move tool-calling implementation to legacy directory with documentation.
Add python-dotenv dependency for environment management.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ anthropic>=0.40.0      # Claude API client for meta-agent
 # Option 2: AIMLAPI (uses OpenAI client format)
 openai>=1.0.0          # OpenAI client for AIMLAPI compatibility
 
+# Environment management
+python-dotenv>=1.0.0   # Load environment variables from .env file
+
 # Testing dependencies
 pytest>=7.4.0          # Test framework
 pytest-cov>=4.1.0      # Coverage reporting
