feat(meta-agent): add LangGraph v2 with Gemini support
Implement LangGraph-based meta-agent with multi-provider support.
Add Gemini API integration alongside existing AIMLAPI support.
Reorganize prompts and refactor graph nodes for provider abstraction.

- Add google-genai dependency to requirements
- Create provider abstraction layer for LLM clients
- Add Gemini-optimized v2.1 system prompt
- Archive legacy prompts to prompts/legacy/
- Update graph.py with llm_provider parameter
- Refactor reasoner_node to use provider pattern
- Add recursion limit to graph config
- Relocate test file to tests/ directory

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ anthropic>=0.40.0      # Claude API client for meta-agent
 # Option 2: AIMLAPI (uses OpenAI client format)
 openai>=1.0.0          # OpenAI client for AIMLAPI compatibility
 
+# Option 3: Google Gemini
+google-genai>=0.1.0    # Google Gemini API client
+
 # Environment management
 python-dotenv>=1.0.0   # Load environment variables from .env file
 
