feat(agents-v2): add Gemini structured output with JSON repair
Enhance LangGraph v2 meta-agent with reliable JSON generation:

- Add schema_converter.py for Pydantic to JSON schema conversion
- Implement json_repair.py to fix common Gemini generation errors
- Enable structured output mode for Gemini 2.5 Pro model
- Consolidate condition validation logic in models.py
- Add fallback JSON repair with variable reference fixing
- Update providers with temperature tuning and error handling
- Fix retry count increment in validator node
- Extend .gitignore to exclude test logs directory
- Pin langgraph-checkpoint-sqlite to <3.0.0 for compatibility

Structured output mode guarantees JSON validity via API constraints,
while repair utilities handle fallback cases and fix known issues
like quadruple braces, missing commas, and invalid variable refs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ python-dotenv>=1.0.0   # Load environment variables from .env file
 
 # LangGraph and LangChain dependencies (v2 production framework)
 langgraph>=0.2.0       # State machine framework for meta-agent v2
-langgraph-checkpoint-sqlite>=3.0.0  # SQLite checkpointing support (REQUIRED)
+langgraph-checkpoint-sqlite>=0.2.0,<3.0.0  # SQLite checkpointing support (REQUIRED)
 langchain>=0.3.0       # Agent framework base
 langchain-openai>=0.2.0  # OpenAI integration (for AIMLAPI)
 langsmith>=0.1.0       # Observability and tracing
