--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,12 @@ black>=23.0.0          # Code formatting
 mypy>=1.4.0           # Type checking
 flake8>=6.0.0         # Linting
 
+# FastAPI and web server dependencies
+fastapi>=0.104.0       # Modern Python web framework for API
+uvicorn[standard]>=0.24.0  # ASGI server for FastAPI
+python-multipart>=0.0.6    # Required for FastAPI form data handling
+websockets>=12.0       # WebSocket support for real-time updates (optional)
+
 # Optional dependencies for future enhancements
 # pyyaml>=6.0          # For YAML configuration files
 # jinja2>=3.1.0        # For template-based code generation (if needed)
