--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,9 @@
 # Frontend Environment Variables
 
 # API Configuration
-VITE_API_URL=http://localhost:8000
+# Leave empty to use proxy (Vite dev server for local, nginx for Docker)
+# Set to http://localhost:8000 only if you want direct backend connection
+VITE_API_URL=
 
 # Feature Flags (optional)
 VITE_ENABLE_DEBUG=false
