docs: update README files and environment config
Refactor documentation for clarity and add comprehensive guides.

- Streamline main README with better structure
- Add dedicated API documentation
- Enhance frontend README with setup instructions
- Update chatbot documentation
- Improve Docker environment configuration
- Update chatbot UI screenshot

--- a/.env.docker.example
+++ b/.env.docker.example
@@ -32,25 +32,41 @@ GEMINI_MODEL=gemini-2.5-pro
 #
 # 2. Add at least ONE API key above (remove the empty value, add your key)
 #
-# 3. Build and start services:
-#    ./start.sh
-#    OR
-#    docker-compose up --build
+# 3. Start services using the interactive launcher:
+#    ./scripts/start.sh
 #
-# 4. Access the application:
-#    - Frontend: http://localhost
+#    The launcher will let you choose:
+#    - Meta-Agent (Workflow Generator)
+#    - Chatbot (Interactive Assistant)
+#    - Both services
+#
+#    Or use direct scripts:
+#    ./scripts/meta-agent-start.sh
+#    ./scripts/chatbot-start.sh
+#
+# 4. Access the applications:
+#
+#    Meta-Agent (Workflow Generator):
+#    - Frontend: http://localhost:3001
 #    - Backend API: http://localhost:8000
-#    - API Docs: http://localhost:8000/docs
+#    - API Docs: http://localhost:8000/api/docs
+#
+#    Chatbot (Interactive Assistant):
+#    - Frontend: http://localhost:3002
+#    - Backend API: http://localhost:8001
+#    - API Docs: http://localhost:8001/api/docs
 #
 # 5. To stop services:
-#    ./stop.sh
+#    ./scripts/stop.sh (interactive menu)
 #    OR
-#    docker-compose down
+#    ./scripts/meta-agent-stop.sh
+#    ./scripts/chatbot-stop.sh
 
 # ============================================================================
 # Notes
 # ============================================================================
 # - At least ONE of the above API keys is required for the system to work
+# - The same API keys are used by both Meta-Agent and Chatbot services
 # - The system will automatically detect which provider is configured
 # - You can configure multiple providers for fallback/testing
 # - Default models are shown above and can be customized
@@ -62,9 +78,13 @@ GEMINI_MODEL=gemini-2.5-pro
 # If backend fails to start:
 #   - Check that at least one API key is configured
 #   - Verify the API key is valid (starts with correct prefix)
-#   - Check logs: docker-compose logs backend
+#   - Check logs:
+#     docker compose logs backend (for meta-agent)
+#     docker compose -f docker-compose.chatbot.yml logs chatbot-backend
 #
 # If frontend can't connect to backend:
-#   - Ensure backend is healthy: docker-compose ps
-#   - Test backend directly: curl http://localhost:8000/api/health
-#   - Check nginx logs: docker-compose logs frontend
+#   - Ensure backend is healthy: docker compose ps
+#   - Test backend directly:
+#     curl http://localhost:8000/api/health (meta-agent)
+#     curl http://localhost:8001/health (chatbot)
+#   - Check nginx logs: docker compose logs frontend
